# wallet-service

./: .env  .gitignore  Cargo.toml  Dockerfile  compose.yaml
.github/workflows/: ci_cd_pipeline.yml
entity/: Cargo.toml
entity/src/: lib.rs  order.rs  position_wallet.rs  prelude.rs  symbol.rs
k8s/: deployment.yaml  deployment.yml  service.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20241229_141013_create_table_wallet.rs
src/: main.rs  symbol.rs  transaction.rs
src/application/: mod.rs  order_controller.rs  order_dto.rs  position_wallet_controller.rs  position_wallet_dto.rs
src/repository/: crud.rs  mod.rs  order_repository.rs  position_wallet_repository.rs  symbol_repository.rs
src/service/: mod.rs  order_service.rs  position_wallet_service.rs  symbol_service.rs
